[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ensemble-1d"
version = "1.0.0"
description = "Modern Machine Learning Ensemble Framework for 1D Data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Umit Kacar", email = "umit@example.com"}
]
keywords = ["machine-learning", "ensemble", "xgboost", "pytorch", "deep-learning", "mlops"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=2.0.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

viz = [
    "plotly>=5.17.0",
    "seaborn>=0.12.0",
    "streamlit>=1.28.0",
    "gradio>=4.0.0",
]

mlops = [
    "mlflow>=2.8.0",
    "wandb>=0.15.0",
    "optuna>=3.4.0",
    "ray[tune]>=2.7.0",
]

deploy = [
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

explainability = [
    "shap>=0.43.0",
    "lime>=0.2.0",
]

all = [
    "ensemble-1d[dev,viz,mlops,deploy,explainability]",
]

[project.urls]
Homepage = "https://github.com/umitkacar/1D-Ensemble"
Documentation = "https://github.com/umitkacar/1D-Ensemble"
Repository = "https://github.com/umitkacar/1D-Ensemble"
Issues = "https://github.com/umitkacar/1D-Ensemble/issues"

[tool.setuptools]
packages = ["ensemble_1d"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=ensemble_1d",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["ensemble_1d"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
