[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

# ============================================
# Project Metadata
# ============================================
[project]
name = "ensemble-1d"
version = "1.0.0"
description = "🚀 Ultra-modern Machine Learning Ensemble Framework for 1D Data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Umit Kacar", email = "umit@example.com"}
]
maintainers = [
    {name = "Umit Kacar", email = "umit@example.com"}
]
keywords = [
    "machine-learning",
    "ensemble",
    "xgboost",
    "pytorch",
    "deep-learning",
    "mlops",
    "production",
    "type-hints",
    "modern-ml",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Core dependencies
dependencies = [
    "torch>=2.0.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "hatch>=1.9.0",
    "pre-commit>=3.5.0",
    "ipython>=8.12.0",
    "ipdb>=0.13.13",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",  # Parallel testing
    "pytest-benchmark>=4.0.0",  # Benchmarking
    "pytest-timeout>=2.2.0",
    "hypothesis>=6.92.0",  # Property-based testing
    "coverage[toml]>=7.3.0",
]

# Code quality dependencies
quality = [
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "types-requests>=2.31.0",
    "types-tqdm>=4.66.0",
]

# Visualization dependencies
viz = [
    "plotly>=5.17.0",
    "seaborn>=0.12.0",
    "streamlit>=1.28.0",
    "gradio>=4.0.0",
]

# MLOps dependencies
mlops = [
    "mlflow>=2.8.0",
    "wandb>=0.15.0",
    "optuna>=3.4.0",
    "ray[tune]>=2.7.0",
    "dvc>=3.30.0",
]

# Deployment dependencies
deploy = [
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
]

# Explainability dependencies
explainability = [
    "shap>=0.43.0",
    "lime>=0.2.0",
]

# Documentation dependencies
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

# Complete installation
all = [
    "ensemble-1d[dev,test,quality,viz,mlops,deploy,explainability,docs]",
]

[project.urls]
Homepage = "https://github.com/umitkacar/1D-Ensemble"
Documentation = "https://github.com/umitkacar/1D-Ensemble#readme"
Repository = "https://github.com/umitkacar/1D-Ensemble"
Issues = "https://github.com/umitkacar/1D-Ensemble/issues"
Changelog = "https://github.com/umitkacar/1D-Ensemble/releases"

# ============================================
# Hatch Build Configuration
# ============================================
[tool.hatch.build.targets.wheel]
packages = ["ensemble_1d"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
    "/.pre-commit-config.yaml",
]

[tool.hatch.version]
path = "ensemble_1d/__init__.py"

# ============================================
# Hatch Environments
# ============================================
[tool.hatch.envs.default]
dependencies = [
    "ensemble-1d[dev,test,quality]",
]

[tool.hatch.envs.default.scripts]
# Testing scripts
test = "pytest {args:tests}"
test-cov = "pytest --cov --cov-report=term-missing --cov-report=html --cov-report=xml {args:tests}"
test-parallel = "pytest -n auto {args:tests}"
test-verbose = "pytest -vv {args:tests}"

# Code quality scripts
lint = "ruff check {args:.}"
lint-fix = "ruff check --fix {args:.}"
format = "black {args:.}"
format-check = "black --check {args:.}"
type-check = "mypy {args:ensemble_1d}"

# Combined quality checks
quality = [
    "format-check",
    "lint",
    "type-check",
]

# Coverage scripts
coverage-report = "coverage report"
coverage-html = "coverage html"
coverage-erase = "coverage erase"

# Pre-commit
pre-commit-install = "pre-commit install"
pre-commit-run = "pre-commit run --all-files"

# All checks
all-checks = [
    "format-check",
    "lint",
    "type-check",
    "test-cov",
]

[tool.hatch.envs.test]
dependencies = [
    "ensemble-1d[test]",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.docs]
dependencies = [
    "ensemble-1d[docs]",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

# ============================================
# Black Configuration
# ============================================
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ============================================
# Ruff Configuration
# ============================================
[tool.ruff]
target-version = "py38"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "TD",     # flake8-todos
    "FIX",    # flake8-fixme
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # NumPy-specific rules
    "PERF",   # Perflint
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "W191",    # indentation contains tabs
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "ANN401",  # dynamically typed expressions (Any)
    "S101",    # use of assert
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "TD002",   # missing TODO author
    "TD003",   # missing TODO link
    "FIX002",  # line contains TODO
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "ARG",     # unused function args in tests
    "FBT",     # boolean trap allowed in tests
    "PLR2004", # magic values allowed in tests
    "S311",    # pseudo-random allowed in tests
]

[tool.ruff.lint.isort]
known-first-party = ["ensemble_1d"]
force-single-line = false
lines-after-imports = 2
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 6
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================
# MyPy Configuration
# ============================================
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "xgboost.*",
    "sklearn.*",
    "torch.*",
    "torchvision.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "streamlit.*",
    "gradio.*",
    "mlflow.*",
    "wandb.*",
    "optuna.*",
    "ray.*",
    "shap.*",
    "lime.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

# ============================================
# Pytest Configuration
# ============================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# ============================================
# Coverage Configuration
# ============================================
[tool.coverage.run]
source = ["ensemble_1d"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================
# Bandit Configuration (Security)
# ============================================
[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
]
skips = ["B101", "B601"]

# ============================================
# Interrogate Configuration (Docstring Coverage)
# ============================================
[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["setup.py", "docs", "build"]
verbose = 1
quiet = false
color = true
